--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -13,5 +13,6 @@
 
 <div id="mainPopup">
 <h1>ComfyFlix</h1>
-<p>Hello, it's me! ~Adele/ComfyFlix</p>
+<a target="_blank" rel="noopener noreferrer"
+       href="https://github.com/malexanderboyd/ComfyFlix">Github</a>
 </div>
